fix layout bug

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -129,7 +129,7 @@ a.external-link {
   margin: 0px 4px 0 0!important;
   vertical-align: baseline!important;
 }
-.custom-check ul{
+.custom-check ul#clickingFrequency{
   margin-top: 1em;
   border: solid 1px #555;
   padding:.5em 0 1em .5em;
